update post, and fix spacing for publications

--- a/static/css/publication.css
+++ b/static/css/publication.css
@@ -62,3 +62,7 @@
 .citation__abbr h2:before {
   content: "";
 }
+
+.citation__abbr h2 {
+  margin-top: 0;
+}
